[package]
name = "rusty-tapes"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
cc = "1.0"
clap = { version = "4.5.47", features = ["derive"] }
futures-util = "0.3.31"
libc = "0.2.174"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
yet-another-discord-rpc = "0.1.0"

[[bin]]
name = "rusty-tapes"
path = "src/main.rs"
